# morris-sim

./: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
docs/: Makefile.am  Makefile.in
docs/help/: morris-sim.txt
docs/reference/: Doxyfile  Makefile.am  Makefile.in
po/: ChangeLog  POTFILES.in  es.gmo  es.po  morris-sim.pot
src/: Makefile.am  Makefile.in  core.h  morris-sim.c  morris-term.c  morris-ui.c  morris-ui.rc  morris.c  morris.h  support.c  support.h  tab_unpack.h  tables.h  wpthread.h
